config/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: grafana.example.com
    http:
      paths:

        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
